frontend/src/assets/css/global.css
h1 {
    margin-top: 0.5em;
    margin-bottom: 1em;
}

.redirect__profile{
  color:royalblue;
}

.main__content {
    padding: 20px 20px 20px 25px;
    background-color: #ffffff;
    box-shadow:
        0 1.3px 20.1px rgba(0, 0, 0, 0.003),
        0 4.2px 44.8px rgba(0, 0, 0, 0.003),
        0 19px 76px rgba(0, 0, 0, 0.06);
    border-radius: 10px;
}

@media only screen and (max-width: 2600px) {
  .main__content {
     margin: 20px 110px 20px 370px;
  }
}

@media only screen and (max-width: 1200px) {
  .main__content {
     margin: 20px 8% 20px;
  }
}

.wrapper {
    display: flex;
    padding-top: 2em;
    flex-wrap: wrap;
}

@media only screen and (max-width: 700px) {
  .wrapper {
    flex-direction: column;
  }

    .first__row, .second__row, .third__row, .filter__submit {
        padding-left: 0 !important;

        display: block;
        margin-left: auto !important;
        margin-right: auto !important;
    }
}

.first__row {
    width: 200px;
    margin-top: auto;
    margin-bottom: 1em;
}

.second__row {
    padding-left: 2em;
    padding-right: 2em;
    flex-grow: 0;
    margin-top: auto;
    margin-bottom: 1em;
}

.third__row {
    padding-left: 0;
    flex-grow: 2;
    margin-top: auto;
    margin-bottom: 1em;
}

.third__row__single {
    padding-left: 0;
    flex-grow: 5;
    margin-top: auto;
    margin-bottom: 3em;
}

.submit__row {
    margin-left: auto;
    order: 3;
    margin-top: 10em;
    margin-right: 3em;
    height: 4em;
    width: 8em;
}

.filter__submit {
    margin-left: auto;
    order: 3;
    margin-top: 5em;
    margin-right: 3em;
    height: 4em;
    width: 8em;
}

.popup__center {
    display: block;
    margin-left: auto;
    margin-right: auto;
    padding-bottom: 4em;
    width: 40%;
    margin-top: 2em;
}

.popup__right {
  position: absolute;
  right: 1em;
  bottom: 1em;
}

.redirect__profile:hover, .concern__name:hover {
    cursor: pointer;
    font-weight: 600;
    text-decoration: underline;
}

.left__filter__row {
    width: 200px;
    margin-top: auto;
    margin-bottom: 1em;
}

.right__filter__row {
    padding-left: 2em;
    flex-grow: 1;
    margin-top: auto;
    margin-bottom: 1em;
}

select {
   padding: 12px 0 0 20px;
}

